# scame

./: .gitignore  Cargo.toml  README.md  install.sh  test_file_a.py  test_file_b.py  test_guides.py  test_indent.py  test_lsp.rs  test_python.py  test_query.rs
.github/workflows/: release.yml
src/: app.rs  config.rs  diff.rs  logger.rs  main.rs  session.rs
src/ai/: manager.rs  mod.rs  provider.rs
src/ai/providers/: claude.rs  copilot.rs  local.rs  mod.rs  openai.rs
src/backup/: manager.rs
src/buffer/: mod.rs  rope_buffer.rs  undo.rs
src/commands/: mod.rs
src/config/: mod.rs
src/editor/: mod.rs  movement.rs  selection.rs  state.rs
src/input/: mod.rs
src/lsp/: client.rs  completion.rs  config.rs  diagnostics.rs  manager.rs  mod.rs  navigation.rs  protocol.rs
src/render/: buffer_view.rs  command_panel.rs  file_picker.rs  mod.rs  project_search.rs  statusbar.rs  tab_bar.rs  terminal.rs  ui_components.rs
src/search/: file_search.rs  mod.rs
src/syntax/: highlighter.rs  mod.rs  theme.rs
src/syntax/languages/: cpp.rs  css.rs  html.rs  javascript.rs  json.rs  markdown.rs  mod.rs  python.rs  rust.rs  xml.rs
src/workspace/: buffer.rs  file_tree.rs  layout.rs  manager.rs  mod.rs
