[package]
name = "scame"
version = "1.2.6"
edition = "2021"

[dependencies]
# Core terminal UI
crossterm = "0.27"

# Text buffer (rope data structure)
ropey = "1.6"

# Syntax highlighting
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-json = "0.21"
tree-sitter-md = "0.2"
tree-sitter-html = "0.20"
tree-sitter-css = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-xml = "0.6"

# LSP client
tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "process"] }

# AI completion providers
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
async-trait = "0.1"

# Search & file operations
regex = "1.10"
fuzzy-matcher = "0.3"
notify = "6.1"
ignore = "0.4"  # Gitignore support (replaces walkdir)

# Clipboard support
arboard = "3.3"

# Diff support
similar = "2.3"

# Configuration & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
